# recipebox-v1-Richie1136

./: pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_author_favorites.py  0002_recipe_favorite.py
recipebox/: settings.py  urls.py
templates/: author_add.html  author_detail.html  index.html  recipe_detail.html  recipe_edit.html
