[tool.poetry]
name = "recipebox-v1-richie1136"
version = "0.1.0"
description = ""
authors = ["Richie1136 <Richiemajor1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
